objects/ASI_eForm_Permission_Type__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Additional_Info_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Info Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_PR_System__c</fullName>
        <label>PR System</label>
        <referenceTo>ASI_eForm_PR_System__c</referenceTo>
        <relationshipLabel>Permission Types</relationshipLabel>
        <relationshipName>ASI_eForm_Permission_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Permission_Type_Description__c</fullName>
        <label>Permission Type Description</label>
        <type>TextArea</type>
    </fields>
    <label>ASI eForm Permission Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_eForm_PR_System__c</columns>
        <columns>NAME</columns>
        <columns>ASI_eForm_Additional_Info_Required__c</columns>
        <columns>ASI_eForm_Permission_Type_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Permission Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI eForm Permission Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>